Update relative links

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <p>Included herein is a listing of all books I have read during the year.</p>
     <ul>
         <li>
-            <a href="./the-horse-and-his-boy-cs-lewis.html">The Horse and His Boy by C.S. Lewis</a>
+            <a href="./each-book/the-horse-and-his-boy-cs-lewis.html">The Horse and His Boy by C.S. Lewis</a>
         </li>
         <li>
-            <a href="the-maze-cutter-james-dashner.html">The Maze Cutter by James Dashner</a>
+            <a href="./each-book/the-maze-cutter-james-dashner.html">The Maze Cutter by James Dashner</a>
         </li>
         <li>
-            <a href="the-book-of-dust-la-belle-sauvage-philip-pullman.html">The Books of Dust Volume One: La Belle Sauvage by Philip Pullman</a>
+            <a href="./each-book/the-book-of-dust-la-belle-sauvage-philip-pullman.html">The Books of Dust Volume One: La Belle Sauvage by Philip Pullman</a>
         </li>
     </ul>
 </body>
