Add navigation to home and page and amazon link, as well as a synopsis of the book

--- a/each-book/the-horse-and-his-boy-cs-lewis.html
+++ b/each-book/the-horse-and-his-boy-cs-lewis.html
@@ -7,6 +7,17 @@
     <title>The Horse and His Boy</title>
 </head>
 <body>
+    <nav>
+        <a href="../index.html">Home</a>
+        <a href="https://www.amazon.com/Horse-His-Chronicles-Narnia-Book-ebook/dp/B001I45UFM/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=1677425889&sr=8-1">Amazon Link</a>
+    </nav>
     <h1>The Horse and His Boy by C.S. Lewis</h1>
+    <h2>Synopsis</h2>
+    <p>The Horse and His Boy is the tale of a young boy named Shasta, a slave boy unfortunate circumstance,
+        who goes on an adventure with a horse he meets named Bree. Shasta quickly learns that Bree is no ordinary
+        horse, in fact, Bree is a talking horse from the magical land of Narnia! Shasta and Bree must work together
+        to help one another escape their enslavement and reach the Narnia without being caught. Along the way they'll
+        meet both friends and enemies, a wise magician, and a particular lion with a great purpose.
+    </p>
 </body>
 </html>
