Add navigation to home page and amazon link, as well as a syncopsis of the book

--- a/each-book/the-maze-cutter-james-dashner.html
+++ b/each-book/the-maze-cutter-james-dashner.html
@@ -7,6 +7,20 @@
     <title>The Maze Cutter</title>
 </head>
 <body>
+    <nav>
+        <a href="../index.html">Home</a>
+        <a href="https://www.amazon.com/Maze-Cutter-James-Dashner-ebook/dp/B0B1L3YXDG/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=1677426071&sr=8-1">Amazon Link</a>
+    </nav>
     <h1>The Maze Cutter by James Dashner</h1>
+    <h2>Synopsis</h2>
+    <p>The Maze Cutter is a book about forgettable, sociopathic characters who have no clue how to
+        not act like complete idiots every second of every day. The story takes place decades after
+        <a href="https://www.amazon.com/Death-Cure-Maze-Runner-Book-ebook/dp/B004JN1CW4/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=1677426501&sr=8-1">The Death Cure</a>
+         on the island where the Gladers escaped to. The morons hop on a ship called The Maze Cutter
+        with a psycho lady and sail to California for stupid reasons that make no sense whatsoever. 
+        Things get a bit wild in Cali and random characters with no real purpose get added to the story. 
+        This book sucks, I will hate read <a href="https://www.amazon.com/stores/James-Dashner/author/B001JP9SEO?ref=ap_rdr&store_ref=ap_rdr&isDramIntegrated=true&shoppingPortalEnabled=true">James Dashner</a>
+         books forever.
+    </p>
 </body>
 </html>
