Add navigation to home page and amazon link, as well as a synopsis of the book

--- a/each-book/the-book-of-dust-la-belle-sauvage-philip-pullman.html
+++ b/each-book/the-book-of-dust-la-belle-sauvage-philip-pullman.html
@@ -7,6 +7,16 @@
     <title>La Belle Sauvage</title>
 </head>
 <body>
+    <nav>
+        <a href="../index.html">Home</a>
+        <a href="https://www.amazon.com/Book-Dust-Belle-Sauvage-ebook/dp/B01N390U59/ref=sr_1_1?keywords=la+belle+sauvage+by+philip+pullman&qid=1677427346&s=digital-text&sprefix=la+belle+sa%2Cdigital-text%2C75&sr=1-1">Amazon Link</a>
+    </nav>
     <h1>The Book of Dust Volume One: La Belle Sauvage by Philip Pullman</h1>
+    <h2>Synopsis</h2>
+    <p>Volume One of The Book of Dust is named after a canoe but that never actually gets explained
+        because Philip Pullman couldn't just take a paragraph to do that. The story is about a weird
+        kid who sails about in his sketchy canoe in Britain. He has like three friends his own age and
+        spends his time hanging out with nuns and a baby. 
+    </p>
 </body>
 </html>
