--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Books</h1>
-    <p>Included herein is a listing of all books I have read during the year.</p>
+    <p>Included herein is a listing of all books I have read during the year:</p>
     <ul>
         <li>
             <a href="./each-book/the-horse-and-his-boy-cs-lewis.html">The Horse and His Boy by C.S. Lewis</a>
